website/home.css
body {
    background: #18191A;
    color: #E4E6EB;
    max-width: 1800px;
    font-family: 'Josefin Sans', sans-serif;
    margin: auto;
    font-size: 18px;
}

/* style scrollbar*/
/* width */
::-webkit-scrollbar {
    width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #242526;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

/* Style tab links */
.tablink {
    background-color: #242526;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    font-size: 17px;
    width: 25%;
}

.tablink:hover {
    background-color: #3A3B3C;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 52px 20px;
}

.wallcontent {
    width: 800px;
    margin: auto;
}

#Home h6,
h2 {
    text-align: center;
}

#Home p {
    text-align: center;
    text-indent: 2em;
}

#Home .row {
    margin: auto;
    max-width: 800px;
}

#Resume h1,
h2 {
    text-align: center;
}

#Resume h3 {
    text-align: left;
}

#Resume .container {
    max-width: 800px;
}

#Resume .title h4 {
    text-align: center;
    margin: 20px;
    margin-top: 30px;
}

#Resume .skills .col-md-3,
.col-sm-3,
.col-xs-3 {
    padding-left: 5px;
    padding-right: 5px;
}

#Resume .separator {
    width: 30%;
}

#Resume #date {
    text-align: right;
}

#Projects h2,
h3,
h4,
h6 {
    text-align: center;
}

#Projects img {
    margin-top: 15px;
    margin-bottom: 15px;
}

#Projects p {
    text-indent: 2em;
}

#Projects ul {
    position: relative;
    z-index: -1;
}

.cloudDiagram>img {
    transition: transform 0.25s ease;
    z-index: 1;

    @media screen and (min-width: 601px) {
        padding-top: 10px;
    }

    @media screen and (max-width: 600px) {
        padding-top: 0px;
    }
}


.cloudDiagram>img:hover {
    @media screen and (min-width: 601px) {
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
        z-index: 2;
    }
}

.dashboard>img {
    transition: transform 0.25s ease;
}

.dashboard>img:hover {
    @media screen and (min-width: 601px) {
        -webkit-transform: scale(1.5);
        transform: scale(1.5);
    }
}

#Blog h1,
h2 {
    text-align: center;
}

#Blog p {
    text-indent: 2em;
}

.unixTimeLine {
    text-align: center;
}

.joke {
    margin: auto;
    text-align: center;
    width: fit-content;

    @media screen and (min-width: 601px) {
        font-size: 18px;
    }

    @media screen and (max-width: 600px) {
        font-size: 12px;
    }

    .jokelist {
        text-align: left;
        margin: auto;
        width: fit-content;
    }

}

.counter {
    position: relative;
    overflow: hidden;
    background-color: #242526;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 10em;
    width: 100%;
    text-align: center;
    font-family: 'Josefin Sans', sans-serif;
    padding: 1em 0;
    margin: 0;

    h2 {
        margin: 0;
        margin-bottom: 0.2em
    }
}

.link {
    color: #DB4D57;
    text-align: center;

    :hover {
        text-decoration: none;
        font-weight: bold;
    }
}

.topnav {
    overflow: hidden;
    background-color: #333;
}

.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav a:hover {
    background-color: #ddd;
    color: black;
}

.topnav a.active {
    background-color: #04AA6D;
    color: white;
}

.topnav .icon {
    display: none;
}

@media screen and (max-width: 600px) {
    .topnav a:not(:first-child) {
        display: none;
    }

    .topnav a.icon {
        float: right;
        display: block;

    }
}

@media screen and (max-width: 600px) {
    .topnav.responsive {
        position: relative;
    }

    .topnav.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}

/* set image to max-width, to display properly on mobile */
img {
    max-width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* Mobile resizing*/

/* If the screen size is 601px wide or more, resize some fonts */
@media screen and (min-width: 601px) {
    .counter {
        font-size: 14px;
    }

    .certifications,
    .skills {
        font-size: 17px;
    }

    .unixTimeLine {
        font-size: 20px;
    }

    h1 {
        font-size: 32px;
    }

}

/* If the screen size is 600px wide or less, resize some fonts */
@media screen and (max-width: 600px) {
    .counter {
        font-size: 10px;
    }

    .certifications,
    p,
    ol,
    .skills,
    li {
        font-size: 12px;
    }

    h6 {
        font-size: 8px;
    }

    h5 {
        font-size: 10px;
    }

    h4 {
        font-size: 12px;
    }

    h3 {
        font-size: 14px;
    }

    h2 {
        font-size: 16px;
    }

    h1 {
        font-size: 20px;
    }
}

/* Wall
    ----------------------------------------------------------- */

.wall {
    width: 100%;
    padding-bottom: 52.5%;
    position: relative;
    background-image: url('https://i.imgur.com/4lJzerg.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 100% auto;

    &:before {
        content: '';
        background-color: rgba(0, 0, 0, 0.35);
        display: block;
        width: 100%;
        height: 100%;
        position: absolute;
    }

    .wallHeader {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-align: center;
        padding: 2rem;
        width: 100%;
    }

    .wallTitle {
        margin-bottom: 1rem;
        color: #E4E6EB;
    }

    .wallText {
        text-align: center;
        color: #E4E6EB;
    }

    /* resize title for mobile*/
    @media screen and (min-width: 601px) {
        .wallTitle {
            font-size: 4em;
        }

        .wallText {
            font-size: 1.8em;
        }
    }

    @media screen and (max-width: 600px) {
        .wallTitle {
            font-size: 2em;
        }

        .wallText {
            font-size: .8em;
        }
    }
}

/* Wall [END]
    ----------------------------------------------------------- */

